PDF fixes + add pkg examples

--- a/04-stochastic.Rmd
+++ b/04-stochastic.Rmd
@@ -114,8 +114,10 @@ There are two possible ways of defining stochastic effects:
 
 - Consider the effect of participation in sports on children's BMI
 - Mediation through snacking, exercising, etc.
-- Intervention: for each individual, increase the odds of participating in a sports by $\delta=2$
-- The post-intervention exposure is a draw $A_\delta$ from a Bernoulli distribution with probability $g_\delta(1\mid w)$
+- Intervention: for each individual, increase the odds of participating in a
+  sports by $\delta=2$
+- The post-intervention exposure is a draw $A_\delta$ from a Bernoulli
+  distribution with probability $g_\delta(1\mid w)$
 
 ### Example: modified treatment policies (MTP) [@diaz2020causal] {-}
 
@@ -123,7 +125,8 @@ There are two possible ways of defining stochastic effects:
 
 - Consider a continuous exposure $A$ taking values in the real numbers
 - Consider an intervention that assigns exposure as $A_\delta = A - \delta$
-- Example: $A$ is pollution measured as $PM_{2.5}$ and you are interested in an intervention that reduces $PM_{2.5}$ concentration by some amount $\delta$
+- Example: $A$ is pollution measured as $PM_{2.5}$ and you are interested in an
+  intervention that reduces $PM_{2.5}$ concentration by some amount $\delta$
 
 ### Mediation analysis for stochastic interventions
 
@@ -184,7 +187,7 @@ Under these assumptions, stochastic effects are identified as follows
 \end{align*}
 
 - Let's dissect the formula for the indirect effect in R:
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 n <- 1e6
 w <- rnorm(n)
 a <- rbinom(n, 1, plogis(1 + w))
@@ -193,13 +196,13 @@ y <- rnorm(n, w + a + m)
 ```
 
 - First, fit regressions of the outcome on $(A,W)$ and $(M,A,W)$:
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 fit_y1 <- lm(y ~ m + a + w)
 fit_y2 <- lm(y ~ a + w)
 ```
 
 - Get predictions fixing $A=a$ for all possible values $a$
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 pred_y1_a1 <- predict(fit_y1, newdata = data.frame(a = 1, m, w))
 pred_y1_a0 <- predict(fit_y1, newdata = data.frame(a = 0, m, w))
 pred_y2_a1 <- predict(fit_y2, newdata = data.frame(a = 1, w))
@@ -208,18 +211,20 @@ pred_y2_a0 <- predict(fit_y2, newdata = data.frame(a = 0, w))
 - Compute
 \[\color{ForestGreen}{\{\E(Y\mid A=a, W)-\E(Y\mid A=a, M, W)\}}\]
 for each value $a$
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 pseudo_a1 <- pred_y2_a1 - pred_y1_a1
 pseudo_a0 <- pred_y2_a0 - pred_y1_a0
 ```
 
-- Estimate the propensity score $g(1\mid w)$ and evaluate the post-intervention propensity score $g_\delta(1\mid w)$
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+- Estimate the propensity score $g(1\mid w)$ and evaluate the post-intervention
+  propensity score $g_\delta(1\mid w)$
+```{r, echo = TRUE, eval = FALSE}
 pscore_fit <- glm(a ~ w, family = binomial())
 pscore <- predict(pscore_fit, type = 'response')
 ## How do the intervention vs observed propensity score compare
 pscore_delta <- 2 * pscore / (2 * pscore + 1 - pscore)
-plot(pscore, pscore_delta, xlab = 'Observed prop. score', ylab = 'Prop. score under intervention')
+plot(pscore, pscore_delta, xlab = 'Observed prop. score',
+     ylab = 'Prop. score under intervention')
 abline(0, 1)
 ## What are the odds of exposure under intervention vs real world?
 odds <- (pscore_delta / (1 - pscore_delta)) / (pscore / (1 - pscore))
@@ -229,12 +234,12 @@ summary(odds)
 - Compute the sum
 \[\color{Goldenrod}{\sum_{a}\color{ForestGreen}{\{\E(Y\mid A=a, W)-\E(Y\mid A=a, M, W)\}}g_\delta(a\mid W)}\]
 
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 indirect <- pseudo_a1 * pscore_delta + pseudo_a0 * (1 - pscore_delta)
 ```
 
 - The average of this value is the indirect effect
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 ## E[Y(Adelta) - Y(Adelta, M)]
 mean(indirect)
 ```
@@ -246,7 +251,7 @@ mean(indirect)
 \end{align*}
 
 - Which can be computed as
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 direct <- (pred_y1_a1 - y) * pscore_delta +
        (pred_y1_a0 - y) * (1 - pscore_delta)
 mean(direct)
@@ -260,9 +265,11 @@ mean(direct)
   - Do not require a cross-world assumption
 
 - Still require the abscence of intermediate confounders
-  - But, compared to the NDE and NIE, we can design a randomized study where identifiability assumptions hold, at least in principle
-  - There is a version of these effects that can accomodate intermediate confounders [@hejazi2020nonparametric]
-  - R implementation to be released soon, stay tuned!
+  - But, compared to the NDE and NIE, we can design a randomized study where
+    identifiability assumptions hold, at least in principle
+  - There is a version of these effects that can accomodate intermediate
+    confounders [@hejazi2020nonparametric]
+  - `R` implementation to be released soon, stay tuned!
 
 <!--
 ID: Should I add: continuous interventions, and/or the definitions of effects with intermediate confounders?
