--- a/01-preface.Rmd
+++ b/01-preface.Rmd
@@ -22,7 +22,8 @@ KER: I think the tone can come off as smug sometimes, so I'd like to delete some
 <!--
 ### An example of a non-causal mediation analysis (product of coefficients)-->
 <!--
-- Assume you are interested in the effect of a treatment $A$ (naltrexone vs. buprenorphine) on an outcome $Y$ (risk of relapse) through mediators $M$
+- Assume you are interested in the effect of a treatment $A$ (naltrexone vs.
+  buprenorphine) on an outcome $Y$ (risk of relapse) through mediators $M$
   (adherence, opioid use, pain, depressive symptoms)
 - We could fit the following models:
     \begin{align}
@@ -33,15 +34,20 @@ KER: I think the tone can come off as smug sometimes, so I'd like to delete some
 - The product $(\gamma_1\beta_1)$ has been proposed as a measure of the effect
   of $A$ on $Y$ through $M$
 - Causal interpretation problems with this method:
-  - What happens if there are confounders of the relation between treatment and outcome?
-  - What happens if there are confounders of the relation between mediator and outcome?
-  - What happens if there are confounders of the relation between treatment and mediator?
-  - What happens if the confounders of mediator and outcome are affected by treatment?
+  - What happens if there are confounders of the relation between treatment and
+    outcome?
+  - What happens if there are confounders of the relation between mediator and
+    outcome?
+  - What happens if there are confounders of the relation between treatment and
+    mediator?
+  - What happens if the confounders of mediator and outcome are affected by
+    treatment?
 ### Example:
 - Assume we have a pre-treamtment confounder of $Y$ and $M$, denote it with $W$
 - For simplicity, assume $A$ is randomized
-- We'll generate a really large sample from a data generating mechanism so that we are not concerned with sampling errors
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+- We'll generate a really large sample from a data generating mechanism so that
+  we are not concerned with sampling errors
+```{r, echo = TRUE, eval = FALSE}
 n <- 1e7
 w <- rnorm(n)
 a <- rbinom(n, 1, 0.5)
@@ -51,12 +57,14 @@ y <- rnorm(n, w - a)
 -->
 
 <!--
-KER: why are you not conditioning on w? if you don't do that, then the models are wrong so why is it surprising that you are getting the wrong answe-->
+KER: why are you not conditioning on w? if you don't do that, then the models
+are wrong so why is it surprising that you are getting the wrong answer-->
 <!--
-- Note that the indirect effect (i.e., the effect through $M$) in this example is zero
+- Note that the indirect effect (i.e., the effect through $M$) in this example
+  is zero
 - Let's see what the product of coefficients method would say:
 -->
-<!--```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+<!--```{r, echo = TRUE, eval = FALSE}
 lm_y <- lm(y ~ m + a)
 lm_m <- lm(m ~ a)
 ## product of coefficients
@@ -71,7 +79,8 @@ coef(lm_y)[2] * coef(lm_m)[2]
 -->
 ## Causal mediation models
 
-In this workshop we will use directed acyclic graphs. We will focus on the two types of graph:
+In this workshop we will use directed acyclic graphs. We will focus on the two
+types of graph:
 
 ### No intermediate confounders
 
@@ -227,7 +236,8 @@ The above graphs can be interpreted as a _non-parametric structural equation mod
 
 - We define all the effects of interest using _counterfactuals_
 - Counterfactuals are hypothetical random variables that would have been
-  observed in an alternative world where something had happened, possibly contrary to fact <!--we would be able to perform interventions on the
+  observed in an alternative world where something had happened, possibly
+  contrary to fact <!--we would be able to perform interventions on the
   random variables of interest-->
 - $Y_a$ is a counterfactual variable in a hypothetical world where $\P(A=a)=1$
   with probability one
@@ -254,6 +264,7 @@ The above graphs can be interpreted as a _non-parametric structural equation mod
 - Interpreted as _the outcome for an individual in a hypothetical world where
   treatment was given but the mediator was held at the value it would have
   taken under no treatment_
-- Causal effects are defined in terms of the distribution of these counterfactuals
-- I.e., causal effects give you information about what would have happened _in some hypothetical world_
-
+- Causal effects are defined in terms of the distribution of these
+  counterfactuals.
+- That is, causal effects give you information about what would have happened
+  _in some hypothetical world_.
