--- a/02-effects-def.Rmd
+++ b/02-effects-def.Rmd
@@ -66,7 +66,8 @@ shorten >=2pt,}
 
 ## Controlled direct effects
 
-- Set the mediator to a reference value $M=m$ uniformly for everyone in the population
+- Set the mediator to a reference value $M=m$ uniformly for everyone in the
+  population
 - Compare $A=1$ vs $A=0$ with $M=m$ fixed
 
 $$\psi_{\text{CDE}} = \E(Y_{1,m} - Y_{0,m}) $$
@@ -88,11 +89,13 @@ knitr::include_graphics(here::here("img", "graphic4a3.png"))
   + $\P(M = m \mid A=a, W) > 0 \text{  } a.e.$
   + $\P(A=a \mid W) > 0 \text{  } a.e.$
 
-Under the above identification assumptions, the controlled direct can be identified:
+Under the above identification assumptions, the controlled direct can be
+identified:
 $$ \E(Y_{1,m} - Y_{0,m}) = \E\{\color{ForestGreen}{\E(Y \mid A=1, M=m, W) - \E(Y \mid A=0, M=m, W)}\}$$
 
-- For intuition about this formula in R, let's continue with our toy example, where we now add an indirect effect
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+- For intuition about this formula in R, let's continue with our toy example,
+  where we now add an indirect effect
+```{r, echo = TRUE, eval = FALSE}
 n <- 1e6
 w <- rnorm(n)
 a <- rbinom(n, 1, 0.5)
@@ -100,21 +103,23 @@ m <- rnorm(n, w + a)
 y <- rnorm(n, w + a + m)
 ```
 - First we fit a correct model for the outcome
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 lm_y <- lm(y ~ m + a + w)
 ```
 - Assume we would like the CDE at $m=0$
-- Then we generate predictions \[\color{ForestGreen}{\E(Y \mid A=1, M=m, W)} \text{ and }\color{ForestGreen}{\E(Y \mid A=0, M=m, W)}:\]
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+- Then we generate predictions \[\color{ForestGreen}{\E(Y \mid A=1, M=m, W)}
+  \text{ and }\color{ForestGreen}{\E(Y \mid A=0, M=m, W)}:\]
+```{r, echo = TRUE, eval = FALSE}
 pred_y1 <- predict(lm_y, newdata = data.frame(a = 1, m = 0, w = w))
 pred_y0 <- predict(lm_y, newdata = data.frame(a = 0, m = 0, w = w))
 ```
-- Then we compute the difference between the predicted values $\color{ForestGreen}{\E(Y \mid A=1, M=m, W) - \E(Y \mid A=0, M=m, W)}$, and average across values of $W$
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+- Then we compute the difference between the predicted values
+  $\color{ForestGreen}{\E(Y \mid A=1, M=m, W) - \E(Y \mid A=0, M=m, W)}$, and
+  average across values of $W$
+```{r, echo = TRUE, eval = FALSE}
 ## CDE at m = 0
 mean(pred_y1 - pred_y0)
 ```
-
 
 ### Is this the estimand I want?
 
@@ -124,7 +129,8 @@ mean(pred_y1 - pred_y0)
   + J. Pearl calls this _prescriptive_.
   + Can you think of an example?
   + Air pollution, rescue inhaler dosage, hospital visits
-  + Does not provide a decomposition of the average treatment effect into direct and indirect effects
+  + Does not provide a decomposition of the average treatment effect into
+    direct and indirect effects
 
 _What if our research question doesn't involve intervening directly on the
 mediator?_
@@ -145,7 +151,7 @@ Still using the same DAG as above,
 - Interpreted as _the outcome for an individual in a hypothetical world where
   treatment was given but the mediator was held at the value it would have
   taken under no treatment_
-  
+
   ```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "50%", results="asis"}
 knitr::include_graphics(here::here("img", "graphic4a.png"))
 ```
@@ -164,13 +170,16 @@ Then we can decompose the _average treatment effect_ $E(Y_1-Y_0)$ as follows
     Y_{\color{blue}{0},\color{red}{M_0}}]}_{\text{natural direct effect}}
 \end{equation*}
 
-- Natural direct effect (NDE): Varying treatment while keeping the mediator fixed at the value it would have taken under no treatment
-- Natural indirect effect (NIE): Varying the mediator from the value it would have taken under treatment to the value it would have taken under control, while keeping treatment fixed
+- Natural direct effect (NDE): Varying treatment while keeping the mediator
+  fixed at the value it would have taken under no treatment
+- Natural indirect effect (NIE): Varying the mediator from the value it would
+  have taken under treatment to the value it would have taken under control,
+  while keeping treatment fixed
 
 ### Identification assumptions:
 
 <!--
-ID: For all the effects, we should add a discussion of identification assumptions: what they mean and try to teach people to identify when they are violated. We can do this in the context of our motivating examples. 
+ID: For all the effects, we should add a discussion of identification assumptions: what they mean and try to teach people to identify when they are violated. We can do this in the context of our motivating examples.
 -->
 
 - $A \indep Y_{a,m} \mid W$
@@ -203,7 +212,7 @@ KER:I don't know what you mean
 - The natural indirect effect can be identified similarly.
 
 - Let's dissect this formula in R:
-```{r, echo = TRUE, eval = FALSE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 n <- 1e6
 w <- rnorm(n)
 a <- rbinom(n, 1, 0.5)
@@ -211,17 +220,17 @@ m <- rnorm(n, w + a)
 y <- rnorm(n, w + a + m)
 ```
 - First we fit a correct model for the outcome
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 lm_y <- lm(y ~ m + a + w)
 ```
 - Then we generate predictions
-\[\color{ForestGreen}{\E(Y \mid A=1, M, W)} \text{ and }\color{ForestGreen}{\E(Y \mid A=0, M, W)}\] with $A$ fixed but letting $M$ and $W$ take their observed values 
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+\[\color{ForestGreen}{\E(Y \mid A=1, M, W)} \text{ and }\color{ForestGreen}{\E(Y \mid A=0, M, W)}\] with $A$ fixed but letting $M$ and $W$ take their observed values
+```{r, echo = TRUE, eval = FALSE}
 pred_y1 <- predict(lm_y, newdata = data.frame(a = 1, m = m, w = w))
 pred_y0 <- predict(lm_y, newdata = data.frame(a = 0, m = m, w = w))
 ```
 - Then we compute the difference between the predicted values
-\[\color{ForestGreen}{\E(Y \mid A=1, M, W) - \E(Y \mid A=0, M, W)},\]
+  \[\color{ForestGreen}{\E(Y \mid A=1, M, W) - \E(Y \mid A=0, M, W)},\]
 - and use this difference as a pseudo-outcome in a regression on $A$ and $W$:
 \[\color{Goldenrod}{\E\{}\color{ForestGreen}{\E(Y \mid A=1, M, W) - \E(Y \mid A=0, M, W)}\color{Goldenrod}{\mid A=0,W\}}\]
 
@@ -234,8 +243,9 @@ pseudo <- pred_y1 - pred_y0
 lm_pseudo <- lm(pseudo ~ a + w)
 ```
 
-- Now we predict the value of this pseudo-outcome under $A=0$, and average the result
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+- Now we predict the value of this pseudo-outcome under $A=0$, and average the
+  result
+```{r, echo = TRUE, eval = FALSE}
 pred_pseudo <- predict(lm_pseudo, newdata = data.frame(a = 0, w = w))
 ## NDE:
 mean(pred_pseudo)
@@ -245,14 +255,17 @@ mean(pred_pseudo)
 
 What does $M_0 \indep Y_{1,m} \mid W$ mean?
 
-- Conditional on $W$, knowledge of the mediator value in the absence of treatment, $M_0$,
+- Conditional on $W$, knowledge of the mediator value in the absence of
+  treatment, $M_0$,
   provides no information about the outcome under treatment, $Y_{1,m}$.
 - Can you think of a data-generating mechanism that would violate this
   assumption?
-- Example: in a randomized study, whenever we believe that treatment assignment works through adherence (i.e., almost
-  always), we are violating this assumption (more on this later). 
+- Example: in a randomized study, whenever we believe that treatment assignment
+  works through adherence (i.e., almost
+  always), we are violating this assumption (more on this later).
 - Cross-world assumptions are problematic for other reasons, including:
-  - You can never design a randomized study where the assumption holds by design
+  - You can never design a randomized study where the assumption holds by
+    design.
 
 
 ### Is this the estimand I want?
@@ -340,43 +353,47 @@ knitr::include_graphics(here::here("img", "ctndag.png"))
 
 ### Unidentifiability of the NDE and NIE in this setting
 
-- In this example, natural direct and indirect effects are
-unidentifiable from observed data on $(W,A,Z,M,Y)$.
-- The technical
-reason for this is that the cross-world counterfactual assumption
+- In this example, natural direct and indirect effects are unidentifiable from observed data on $(W,A,Z,M,Y)$.
+- The technical reason for this is that the cross-world counterfactual
+  assumption
 \begin{equation*}
   Y_{1,m}\indep M_0\mid W
 \end{equation*}
-does not hold in the above directed acyiclic graph.
-- Technically, the
-reason for this is that an intervention setting $A=1$ (necessary for
-the definition of $Y_{1,m}$) induces a counterfactual variable
-$Z_1$.
-- Likewise, an intervention setting $A=0$ (necessary for the
-definition of $M_0$) induces a counterfactual $Z_0$.
-- The variables $Z_1$ and $Z_0$ are correlated because they share unmeasured common
-causes.
-- The variable $Z_1$ is correlated with $Y_{1,m}$, and the
-variable $Z_0$ is correlated with $M_0$, because they are
-counterfactual outcomes in the same hypothetical worlds.
-- To see this in the definition of counterfactual from a causal structural model:
+does not hold in the above directed acyclic graph.
+- Technically, the reason for this is that an intervention setting $A=1$
+  (necessary for the definition of $Y_{1,m}$) induces a counterfactual variable
+  $Z_1$.
+- Likewise, an intervention setting $A=0$ (necessary for the definition of
+  $M_0$) induces a counterfactual $Z_0$.
+- The variables $Z_1$ and $Z_0$ are correlated because they share unmeasured
+  common causes.
+- The variable $Z_1$ is correlated with $Y_{1,m}$, and the variable $Z_0$ is
+  correlated with $M_0$, because they are counterfactual outcomes in the same
+  hypothetical worlds.
+- To see this in the definition of counterfactual from a causal structural
+  model:
 \begin{align*}
 Y_{1,m} &= f_Y(W, 1, Z_1, m, U_Y), \text{ and }\\
 M_0 &= f_M(W, 0, Z_0, U_M)\\
 \end{align*}
-are correlated even after adjusting for $W$ by virtue of $Z_1$ and $Z_0$ being correlated.
+are correlated even after adjusting for $W$ by virtue of $Z_1$ and $Z_0$ being
+correlated.
 
 Intuitively:
 
-- $Z$ is a confounder of the relation $M \rightarrow Y$, which requires adjustment
+- $Z$ is a confounder of the relation $M \rightarrow Y$, which requires
+  adjustment
 - But $Z$ is on the pathway $A\rightarrow Y$, which precludes adjustment
 
-Note: CDEs are still identified in this setting. They can be identified and estimated similarly to a longitudinal data sructure with a two-time-point intervention.
+Note: CDEs are still identified in this setting. They can be identified and
+estimated similarly to a longitudinal data sructure with a two-time-point
+intervention.
 
 ## Interventional (in)direct effects
 
 <!--
-I think the distinction between fully conditional and not will be completely lost on people
+I think the distinction between fully conditional and not will be completely
+lost on people
 -->
 
 - Let $G_a$ denote a random draw from the distribution of $M_a \mid W$
@@ -391,8 +408,10 @@ I think the distinction between fully conditional and not will be completely los
     \underbrace{\E[Y_{\color{blue}{1},\color{red}{G_0}} -
     Y_{\color{blue}{0},\color{red}{G_0}}]}_{\text{interventional direct effect}}
 \end{equation*}
-- Note that $\E[Y_{1,G_1} - Y_{0,G_0}]$ is still a _total effect_ of treatment, even if it is different from the ATE \E[Y_{1} - Y_{0}]
-- We gain in the ability to solve a problem, but lose in terms of interpretation of the causal effect (cannot decompose the ATE)
+- Note that $\E[Y_{1,G_1} - Y_{0,G_0}]$ is still a _total effect_ of treatment,
+  even if it is different from the ATE $\E[Y_{1} - Y_{0}]$
+- We gain in the ability to solve a problem, but lose in terms of interpretation
+  of the causal effect (cannot decompose the ATE)
 
 ```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "50%", results="asis"}
 knitr::include_graphics(here::here("img", "graphic4b.png"))
@@ -429,7 +448,7 @@ Under these assumptions, the population interventional direct and indirect effec
 
 - Let's dissect this formula in R:
 
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 n <- 1e6
 w <- rnorm(n)
 a <- rbinom(n, 1, 0.5)
@@ -440,14 +459,14 @@ y <- rnorm(n, w + a + z + m)
 
 - Let us compute $\E(Y_{1, G_0})$ (so that $a = 1$, and $a'=0$).
 - First, fit a regression model for the outcome, and compute
-\[\color{ForestGreen}{\E(Y \mid A=a, Z=z, M, W)}\]
-for all values of $z$
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+  \[\color{ForestGreen}{\E(Y \mid A=a, Z=z, M, W)}\] for all values of $z$
+```{r, echo = TRUE, eval = FALSE}
 lm_y <- lm(y ~ m + a + z + w)
 pred_a1z0 <- predict(lm_y, newdata = data.frame(m = m, a = 1, z = 0, w = w))
 pred_a1z1 <- predict(lm_y, newdata = data.frame(m = m, a = 1, z = 1, w = w))
 ```
-- Now we fit the true model for $Z\mid A, W$ and get the conditional probability that $Z=1$ fixing $A=1$
+- Now we fit the true model for $Z \mid A, W$ and get the conditional
+  probability that $Z=1$ fixing $A=1$
 ```{r, echo = TRUE, eval = TRUE, cache = TRUE}
 prob_z <- lm(z ~ a)
 pred_z <- predict(prob_z, newdata = data.frame(a = 1))
@@ -457,18 +476,20 @@ pred_z <- predict(prob_z, newdata = data.frame(a = 1))
 ```{r, echo = TRUE, eval = TRUE, cache = TRUE}
 pseudo_out <- pred_a1z0 * (1 - pred_z) + pred_a1z1 * pred_z
 ```
-- Now we regress this pseudo-outcome on $A,W$, and compute the predictions setting $A=0$, that is
+- Now we regress this pseudo-outcome on $A,W$, and compute the predictions
+  setting $A=0$, that is,
 \[\color{Purple}{\E\left\{\color{Goldenrod}{\sum_z}\color{ForestGreen}{\E(Y \mid A=a, Z=z, M, W)} \color{Goldenrod}{\P(Z=z \mid A=a, w)}\mid A=a', W\right\}}\]
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 fit_pseudo <- lm(pseudo_out ~ a + w)
 pred_pseudo <- predict(fit_pseudo, data.frame(a = 0, w = w))
 ```
 - And finally, just average those predictions!
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 ## Mean(Y(1, G(0)))
 mean(pred_pseudo)
 ```
-- This was for $(a,a')=(1,0)$. Can do the same with $(a,a')=(1,1)$, and $(a,a')=(0,0)$ to obtain an effect decomposition
+- This was for $(a,a')=(1,0)$. Can do the same with $(a,a')=(1,1)$, and
+  $(a,a')=(0,0)$ to obtain an effect decomposition
 
 \begin{equation*}
 \E[Y_{1,G_1} - Y_{0,G_0}] = \underbrace{\E[Y_{\color{red}{1},\color{blue}{G_1}} -
