--- a/05-preliminaries-estimation.Rmd
+++ b/05-preliminaries-estimation.Rmd
@@ -2,24 +2,25 @@
 
 ## From causal to statistical quantities
 
-- We have arrived at identification formulas that express quantities that we care about in terms of observable quantities
+- We have arrived at identification formulas that express quantities that we
+  care about in terms of observable quantities
 - This required **causal assumptions**
   - Many of these assumptions are empirically unverifiable
-  - We saw an example where we could relax the cross-world assumption, at the cost of changing the parameter interpretation
-- The resulting estimation problem can be tackled using **statistical assumptions** of various degrees of strength
+  - We saw an example where we could relax the cross-world assumption, at the
+    cost of changing the parameter interpretation
+- The resulting estimation problem can be tackled using **statistical
+  assumptions** of various degrees of strength
   - Most of these assumptions are verifiable (e.g., a linear model)
   - Thus, most are unnecessary (except for convenience)
-  - The estimation approach we use reduces reliance on these statistical assumptions
-   
+  - The estimation approach we use reduces reliance on these statistical
+    assumptions
 - The mediation parameters that we consider can be
   seen as a function of the joint probability distribution of $O=(W,A,Z,M,Y)$
 - For example, under identifiability assumptions the natural direct effect is
   equal to
-
   \begin{equation*}
     \psi(\P) =  \E[\E\{\E(Y \mid A=1, M, W) - \E(Y \mid A=0, M, W)\mid A=0,W\}]
   \end{equation*}
-
 - The notation $\psi(\P)$ implies that the parameter is a function of $\P$
 - This means that we can compute it for any distribution $\P$
 - For example, if we know the true $\P(W,A,M,Y)$, we can comnpute the true value
@@ -29,7 +30,6 @@
   - Computing the probability $\P(M=m\mid A=0,W=w)$ for all values $(m,w)$
   - Computing the probability $\P(W=w)$ for all values $w$
   - Computing the mean over all values $(m,w)$
-  
 - This is how you would compute the _true value_ **if you know** the true
   distribution $\P$
   - This is exactly what we did in our R examples before
@@ -56,18 +56,19 @@
   - Unless $W$ and $M$ contain very few categorical variables, it is very easy
     to misspecify the models
   - This can introduce sizable bias in the estimators
-  
+
 ### An example of the bias of a g-computation estimator of the natural direct effect
 
 - The following R chunk provides simulation code to exemplify the bias of a g-computation estimator in a simple situation
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
+```{r, echo = TRUE, eval = FALSE}
 mean_y <- function(m, a, w) abs(w) + a * m
 mean_m <- function(a, w) plogis(w^2 - a)
 pscore <- function(w) plogis(1 - abs(w))
 
 w_big <- runif(1e6, -1, 1)
-trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) * mean_m(0, w_big) +
-  (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) * (1 - mean_m(0, w_big)))
+trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) *
+  mean_m(0, w_big) + (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) *
+  (1 - mean_m(0, w_big)))
 print(trueval)
 
 estimate <- numeric(1000)
@@ -92,8 +93,7 @@ abline(v = trueval, col = "red", lwd = 4)
 ```
 
 - The bias also affects the confidence intervals:
-
-```{r, echo = TRUE, eval = TRUE, cache = TRUE, fig.height = 8, fig.width = 8}
+```{r, echo = TRUE, eval = FALSE, fig.height = 8, fig.width = 8}
 cis <- cbind(
   estimate - qnorm(0.975) * sd(estimate),
   estimate + qnorm(0.975) * sd(estimate)
@@ -128,10 +128,10 @@ text(450, 0.01, paste0(
   - Might be harder to implement depending on the regression procedures used
   - No general approaches for computation of standard errors and confidence
     intervals
-  - E.g., the bootstrap is not guaranteed to work, and it is known to fail in some cases
+  - For example, the bootstrap is not guaranteed to work, and it is known to
+    fail in some cases
   - G-computation estimation with data-adaptive regression offers an incorrect
-  bias/variance trade-off
-
+    bias/variance trade-off
 
 ## Semiparametric estimation
 
