--- a/05-preliminaries-estimation.Rmd
+++ b/05-preliminaries-estimation.Rmd
@@ -14,6 +14,9 @@
   - Thus, most are unnecessary (except for convenience)
   - The estimation approach we use reduces reliance on these statistical
     assumptions
+
+### Computing identification formulas if you know the true distribution
+
 - The mediation parameters that we consider can be
   seen as a function of the joint probability distribution of $O=(W,A,Z,M,Y)$
 - For example, under identifiability assumptions the natural direct effect is
@@ -30,13 +33,21 @@
   - Computing the probability $\P(M=m\mid A=0,W=w)$ for all values $(m,w)$
   - Computing the probability $\P(W=w)$ for all values $w$
   - Computing the mean over all values $(m,w)$
-- This is how you would compute the _true value_ **if you know** the true
+
+### Estimating identification formulas
+
+The above is how you would compute the _true value_ **if you know** the true
   distribution $\P$
-  - This is exactly what we did in our R examples before
+  
+- This is exactly what we did in our R examples before
 - But we can use the same logic for estimation:
-  - Fit a regression to estimate $\E(Y\mid A=1,M=m,W=w)$
-  - Fit a regression to estimate $\P(M=m\mid A=0,W=w)$
+  - Fit a regression to estimate, say $\hat\E(Y\mid A=1,M=m,W=w)$
+  - Fit a regression to estimate, say $\hat\P(M=m\mid A=0,W=w)$
   - Estimate $\P(W=w)$ with the empirical distribution
+  - Evaluate
+    \begin{equation*}
+    \psi(\hat\P) =  \hat\E[\hat\E\{\hat\E(Y \mid A=1, M, W) - \hat\E(Y \mid A=0, M, W)\mid A=0,W\}]
+  \end{equation*}
 - This is known as the g-computation estimator 
 
 ### How can g-estimation be implemented in practice?
@@ -64,13 +75,32 @@
 mean_y <- function(m, a, w) abs(w) + a * m
 mean_m <- function(a, w) plogis(w^2 - a)
 pscore <- function(w) plogis(1 - abs(w))
+```
 
+- This yields a true NDE value of
+```{r, echo = FALSE, eval = FALSE}
 w_big <- runif(1e6, -1, 1)
 trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) *
   mean_m(0, w_big) + (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) *
-  (1 - mean_m(0, w_big)))
+    (1 - mean_m(0, w_big)))
 print(trueval)
+```
 
+- Let's perform a simulation where we draw 1000 datasets from the above distribition, and compute a g-computation estimator based on
+```{r, echo = TRUE, eval = FALSE}
+gcomp <- function(y, m, a, w) {
+  lm_y <- lm(y ~ m + a + w)
+  pred_y1 <- predict(lm_y, newdata = data.frame(a = 1, m = m, w = w))
+  pred_y0 <- predict(lm_y, newdata = data.frame(a = 0, m = m, w = w))
+  pseudo <- pred_y1 - pred_y0
+  lm_pseudo <- lm(pseudo ~ a + w)
+  pred_pseudo <- predict(lm_pseudo, newdata = data.frame(a = 0, w = w))
+  estimate <- mean(pred_pseudo)
+  return(estimate)
+}
+```
+
+```{r, echo = FALSE, eval = FALSE}
 estimate <- numeric(1000)
 for (i in 1:1000) {
   n <- 1000
@@ -79,13 +109,7 @@ for (i in 1:1000) {
   m <- rbinom(n, 1, mean_m(a, w))
   y <- rnorm(n, mean_y(m, a, w))
 
-  lm_y <- lm(y ~ m + a + w)
-  pred_y1 <- predict(lm_y, newdata = data.frame(a = 1, m = m, w = w))
-  pred_y0 <- predict(lm_y, newdata = data.frame(a = 0, m = m, w = w))
-  pseudo <- pred_y1 - pred_y0
-  lm_pseudo <- lm(pseudo ~ a + w)
-  pred_pseudo <- predict(lm_pseudo, newdata = data.frame(a = 0, w = w))
-  estimate[i] <- mean(pred_pseudo)
+  estimate[i] <- gcomp(y, m, a, w)
 }
 
 hist(estimate)
@@ -93,7 +117,7 @@ abline(v = trueval, col = "red", lwd = 4)
 ```
 
 - The bias also affects the confidence intervals:
-```{r, echo = TRUE, eval = FALSE, fig.height = 8, fig.width = 8}
+```{r, echo = FALSE, eval = FALSE, fig.height = 8, fig.width = 8}
 cis <- cbind(
   estimate - qnorm(0.975) * sd(estimate),
   estimate + qnorm(0.975) * sd(estimate)
@@ -130,51 +154,36 @@ text(450, 0.01, paste0(
     intervals
   - For example, the bootstrap is not guaranteed to work, and it is known to
     fail in some cases
-  - G-computation estimation with data-adaptive regression offers an incorrect
+
+
+## Semiparametric estimation (or correcting the bias of g-computation estimators)
+
+- G-computation estimation with data-adaptive regression offers an incorrect
     bias/variance trade-off
-
-## Semiparametric estimation
-
-- The bias of a g-computation estimator can often be expressed as
+- It accepts more bias than necessary
+- The bias of a g-computation estimator may be corrected as follows:
   \begin{equation*}
-    \psi(\hat\P) - \psi(\P) \approx -\E[D(O;\hat\P)]
+    \psi(\hat \P) + \frac{1}{n}\sum_{i=1}^n D(O_i)
   \end{equation*}
-- The function $D(O;\P)$ is called _the efficient influence function_ (EIF)
+for some function $D(O_i)$ of the data
+- The function $D(O)$ is called _the efficient influence function_ (EIF)
 - The EIF must be found on a case-by-case basis for each parameter $\psi(\P)$
-- For example, for estimating the standardized mean $\psi(P)=\E[\E(Y\mid A=1,
+- For example, for estimating the standardized mean $\psi(\P)=\E[\E(Y\mid A=1,
   W)]$, we have
   \begin{equation*}
-    D(O,\hat\P) = \frac{A}{\hat \P(A=1\mid W)}[Y - \hat\E(Y\mid A=1, W)] +
+    D(O) = \frac{A}{\hat \P(A=1\mid W)}[Y - \hat\E(Y\mid A=1, W)] +
     \hat\E(Y\mid A=1, W) - \psi(\hat\P)
   \end{equation*}
 - The EIF is found by using a distributional analogue of a Taylor expansion
-- In this workshop we will omit the specific form of $D(O;\hat\P)$ for
+- In this workshop we will omit the specific form of $D(O)$ for
   some of the parameters that we use
 - But the estimators we discuss and implement in the R packages will be based on
   theser EIFs
 - And the specific form of the EIF may be found in papers in the references
 
-### Bias-correction of g-computation estimators
-<!--
-KER: I don't find the below helpful
--->
-- There are at least two ways to use the EIF to perform a bias correction for a
-  g-computation estimator
-1. _one step_ estimator:
-  \begin{equation*}
-    \psi(\hat \P) + \frac{1}{n}\sum_{i=1}^n D(O;\hat \P_i)
-  \end{equation*}
-- Idea: subtract an estimate of the
-  bias of the g-computation estimator
-2. _targeted maximum likelihood estimator_ (TMLE)
-- TMLE is based on the principle that it is possible to construct a
-  data-adaptive estimator $\tilde \P$ such that
-  \begin{equation*}
-    \frac{1}{n}\sum_{i=1}^n D(O;\tilde \P_i)=0
-  \end{equation*}
-- Thus, for this special data-adaptive estimate $\tilde \P$, the TMLE is
-  actually just the g-computation estimator $\psi(\tilde\P)$
+Note: the bias correction above may have an additional problem of returning parameter estimates outside of natural bounds. E.g., probabilities greater than one. A solution to this (not discussed in this workshop) is targeted minimum loss based estimation.
+
 
 <!--
-ID: Nima, could we add here simulation results like the above, but for a TMLE or a one-step?
+KER: I don't find the below helpful
 -->
